--- a/apps/editor/src/css/old/editor.css
+++ b/apps/editor/src/css/old/editor.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* height */
 .auto-height,
 .auto-height .tui-editor-defaultUI {
@@ -34,7 +33,7 @@
 .tui-editor {
   position: absolute;
   line-height: 1;
-  color: #222;
+  color: #181818;
   width: 100%;
   height: inherit;
 }
@@ -758,7 +757,7 @@
 }
 
 .tui-toolbar-icons {
-  background: url('../img/toastui-editor.png');
+  background: url('../../img/toastui-editor.png');
   background-size: 218px 188px;
   display: inline-block;
 }
@@ -770,7 +769,7 @@
   only screen and (min-resolution: 192dpi),
   only screen and (min-resolution: 2dppx) {
   .tui-toolbar-icons {
-    background: url('../img/toastui-editor-2x.png');
+    background: url('../../img/toastui-editor-2x.png');
     background-size: 218px 188px;
     display: inline-block;
   }
