feat: apply design review

--- a/apps/editor/src/css/contents.css
+++ b/apps/editor/src/css/contents.css
@@ -264,11 +264,11 @@
 
 .tui-editor-contents a {
   text-decoration: underline;
-  color: #00a9ff;
+  color: #4b96e6;
 }
 
 .tui-editor-contents a:hover {
-  color: #00a9ff;
+  color: #1f70de;
 }
 
 .tui-editor-contents {
