--- a/apps/editor/src/css/contents.css
+++ b/apps/editor/src/css/contents.css
@@ -319,7 +319,7 @@
 }
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  /* IE10 */
+  /* IE10+11 */
   .te-ww-container .tui-editor-contents li {
     vertical-align: middle;
   }
