--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -557,7 +557,7 @@
 }
 
 .te-popup-table-utils {
-  width: initial;
+  width: auto;
   min-width: 120px;
 }
 
@@ -567,6 +567,7 @@
 
 .te-popup-table-utils button {
   display: block;
+  width: 100%;
   background-color: #fff;
   border: none;
   outline: 0;
@@ -582,6 +583,7 @@
 }
 
 .te-popup-table-utils hr {
+  margin: 0;
   background-color: #cacaca;
   border-style: none;
   height: 1px;
