feat: add placeholder plugin

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -65,11 +65,12 @@
 .te-md-container .ProseMirror {
   font-size: 13px;
   height: inherit;
-}
-
-.te-md-container .ProseMirror {
   overflow: auto;
   height: 100%;
+}
+
+.te-md-container .ProseMirror .placeholder {
+  color: #999;
 }
 
 .te-md-container .ProseMirror:focus {
