--- a/apps/editor/src/css/old/editor.css
+++ b/apps/editor/src/css/old/editor.css
@@ -453,9 +453,9 @@
 
 .tui-editor-popup {
   position: absolute;
-  top: 30px;
+  /* top: 30px;
   left: 50%;
-  margin-left: -250px;
+  margin-left: -250px; */
 }
 
 .tui-editor-popup.tui-popup-modal-background {
