feat: add scroll sync button to toolbar

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -532,6 +532,10 @@
   background: #fff;
 }
 
+.te-popup-add-table  {
+  width: auto;
+}
+
 .te-popup-add-table .te-table-selection {
   position: relative;
 }
