--- a/apps/editor/src/css/old/editor.css
+++ b/apps/editor/src/css/old/editor.css
@@ -238,7 +238,6 @@
 }
 
 .tui-toolbar-divider {
-  float: left;
   display: inline-block;
   width: 1px;
   height: 14px;
@@ -246,16 +245,11 @@
   margin: 9px 6px;
 }
 
-.tui-toolbar-button-group {
-  height: 28px;
-  border-right: 1px solid #d9d9d9;
-  float: left;
-}
-
 .te-toolbar-section {
   height: 32px;
   box-sizing: border-box;
   border-bottom: 1px solid #e5e5e5;
+  position: relative;
 }
 
 .tui-editor-defaultUI-toolbar button {
@@ -277,14 +271,6 @@
 .tui-editor-defaultUI-toolbar button.active {
   border: 1px solid #aaa;
   background-color: #fff;
-}
-
-.tui-editor-defaultUI-toolbar button:first-child {
-  margin-left: 0;
-}
-
-.tui-editor-defaultUI-toolbar button:last-child {
-  margin-right: 0;
 }
 
 .tui-editor-defaultUI-toolbar button.tui-scrollsync {
@@ -453,9 +439,6 @@
 
 .tui-editor-popup {
   position: absolute;
-  top: 30px;
-  left: 50%;
-  margin-left: -250px;
 }
 
 .tui-editor-popup.tui-popup-modal-background {
@@ -555,15 +538,11 @@
   text-align: center;
 }
 
-.te-popup-table-utils {
+.te-context-menu {
   width: 120px;
 }
 
-.te-popup-table-utils .tui-popup-body {
-  padding: 0px;
-}
-
-.te-popup-table-utils button {
+.te-context-menu button {
   width: 100%;
   background-color: #fff;
   border: none;
@@ -575,21 +554,21 @@
   color: #777;
 }
 
-.te-popup-table-utils button:hover {
+.te-context-menu button:hover {
   background-color: #f4f4f4;
 }
 
-.te-popup-table-utils hr {
+.te-context-menu hr {
   background-color: #cacaca;
   border-style: none;
   height: 1px;
 }
 
-.te-popup-table-utils .te-context-menu-disabled {
+.te-context-menu .te-context-menu-disabled {
   color: #ccc;
 }
 
-.te-popup-table-utils .te-context-menu-disabled:hover {
+.te-context-menu .te-context-menu-disabled:hover {
   background-color: #fff;
 }
 
