feat: reconstruct ui component(toolbar, contextmenu) - 2 (#1346)
* fix: handle object style in vdom

* wip: add toolbar component

* fix: set old component for recycling

* wip: add toolbar component

* feat: optimize rerendering vdom perf

* refactor: add toolbar directory

* refactor: toolbar layer

* feat: add tab component

* refactor: add component class for vdom component

* feat: add scroll sync button to toolbar

* feat: destroy the default layout and add command for scroll sync toolbar button

* fix: cursor position when moving scroll to start or end

* refactor: manage toolbarItems state in layout

* refactor: pass the payload toggleScrollSync command

* refactor: remove unecessary toolbar css

* feat: add context menu component

* feat: toggle md tab for displaying the editor or preview

* chore: move test directory

* chore: enhance vdom component test

* chore: change table command to addTable and remove openContextmenu

* feat: add prev props

* fix: hide toolbar tab toggle preview style or editor mode

* chore: add case(toolbar, toggle state)

* fix: call HookCallback in image layer

* fix: should not render vnode when falsy value

* chore: add template test case

* feat: add toolbar highlight

* chore: remove unnecessary comment

* chore: apply code review

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -238,25 +238,19 @@
   overflow: hidden;
 }
 
+.te-toolbar-section {
+  height: 32px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #e5e5e5;
+  position: relative;
+}
+
 .tui-toolbar-divider {
-  float: left;
   display: inline-block;
   width: 1px;
   height: 14px;
   background-color: #ddd;
   margin: 9px 6px;
-}
-
-.tui-toolbar-button-group {
-  height: 28px;
-  border-right: 1px solid #d9d9d9;
-  float: left;
-}
-
-.te-toolbar-section {
-  height: 32px;
-  box-sizing: border-box;
-  border-bottom: 1px solid #e5e5e5;
 }
 
 .tui-editor-defaultUI-toolbar button {
@@ -278,14 +272,6 @@
 .tui-editor-defaultUI-toolbar button.active {
   border: 1px solid #aaa;
   background-color: #fff;
-}
-
-.tui-editor-defaultUI-toolbar button:first-child {
-  margin-left: 0;
-}
-
-.tui-editor-defaultUI-toolbar button:last-child {
-  margin-right: 0;
 }
 
 .tui-editor-defaultUI-toolbar button.tui-scrollsync {
@@ -403,6 +389,7 @@
   border: 1px solid #cacaca;
   background: white;
   z-index: 9999;
+  position: absolute;
 }
 
 .tui-popup-modal-background .tui-popup-wrapper {
@@ -454,9 +441,6 @@
 
 .tui-editor-popup {
   position: absolute;
-  top: 30px;
-  left: 50%;
-  margin-left: -250px;
 }
 
 .tui-editor-popup.tui-popup-modal-background {
@@ -530,6 +514,10 @@
   background: #fff;
 }
 
+.te-popup-add-table  {
+  width: auto;
+}
+
 .te-popup-add-table .te-table-selection {
   position: relative;
 }
@@ -556,16 +544,15 @@
   text-align: center;
 }
 
-.te-popup-table-utils {
+.te-context-menu {
+  position: absolute;
   width: auto;
   min-width: 120px;
+  font-size: 12px;
+  border: 1px solid #cacaca;
 }
 
-.te-popup-table-utils .tui-popup-body {
-  padding: 0px;
-}
-
-.te-popup-table-utils button {
+.te-context-menu button {
   display: block;
   width: 100%;
   background-color: #fff;
@@ -578,22 +565,22 @@
   color: #777;
 }
 
-.te-popup-table-utils button:hover {
+.te-context-menu button:hover {
   background-color: #f4f4f4;
 }
 
-.te-popup-table-utils hr {
+.te-context-menu hr {
   margin: 0;
   background-color: #cacaca;
   border-style: none;
   height: 1px;
 }
 
-.te-popup-table-utils .te-context-menu-disabled {
+.te-context-menu .te-context-menu-disabled {
   color: #ccc;
 }
 
-.te-popup-table-utils .te-context-menu-disabled:hover {
+.te-context-menu .te-context-menu-disabled:hover {
   background-color: #fff;
 }
 
