--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -281,6 +281,16 @@
   border: 0;
 }
 
+.tui-dropdown-toolbar {
+  position: absolute;
+  width: auto;
+  height: 31px;
+  z-index: 10;
+  margin-right: auto;
+  border: 1px solid #cacaca;
+  background: #fff;
+}
+
 .tui-editor-defaultUI button.tui-scrollsync:after {
   content: 'Scroll off';
 }
@@ -640,15 +650,6 @@
 
 .te-heading-add h6 {
   font-size: 14px;
-}
-
-.te-dropdown-toolbar {
-  position: absolute;
-  width: auto;
-}
-
-.te-dropdown-toolbar .tui-popup-body {
-  padding: 0px;
 }
 
 .tui-popup-color {
@@ -1234,7 +1235,7 @@
     margin-left: -150px;
   }
 
-  .te-dropdown-toolbar {
+  .tui-dropdown-toolbar {
     max-width: none;
   }
 }
