--- a/apps/editor/src/css/contents.css
+++ b/apps/editor/src/css/contents.css
@@ -342,6 +342,62 @@ table.ProseMirror-selectednode {
   margin-top: 3px;
 }
 
+.tui-code-block {
+  position: relative;
+}
+
+.tui-code-block.language {
+  position: absolute;
+  display: inline-block;
+  width: 100px;
+  height: 28px;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.tui-code-block.language input {
+  margin: 0;
+  padding: 0 10px;
+  width: 80px;
+  height: 100%;
+  background-color: none;
+  border: none;
+  outline: none;
+}
+
+.tui-code-block-tool {
+  position: absolute;
+  height: 25px;
+  top: 10px;
+  right: 10px;
+  padding: 3px 0 2px 10px;
+  border-radius: 2px;
+  background-color: #e5e9ea;
+}
+
+.tui-code-block-tool span {
+  vertical-align: middle;
+  font-weight: bold;
+  font-size: 13px;
+  font-weight: bold;
+  user-select: none;
+}
+
+.tui-code-block-tool button {
+  vertical-align: middle;
+  width: 15px;
+  height: 15px;
+  margin-left: 8px;
+  padding: 3px;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23555'%3E%3Cg%3E%3Cg%3E%3Cg%3E%3Cpath d='M5.5 2.5l2 2L2 10H0V8l5.5-5.5zM8 0l2 2-1.5 1.5-2-2L8 0z' transform='translate(-940 -712) translate(60 647) translate(875 60) translate(5 5)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
+    no-repeat;
+  background-position: 5px 5px;
+}
+
 .custom-block .custom-block-editor {
   background: #f9f7fd;
   color: #452d6b;
