fix: change style

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -148,6 +148,7 @@
 .te-ww-container > .te-editor {
   overflow: auto;
   height: inherit;
+  position: relative;
 }
 
 .te-ww-container .tui-editor-contents:focus {
