chore: apply cls function

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -513,7 +513,7 @@
   width: auto;
 }
 
-.tui-editor-popup-add-heading .tui-popup-body {
+.tui-editor-popup-add-heading .tui-editor-popup-body {
   padding: 0;
 }
 
