feat: apply code review-1

--- a/plugins/code-syntax-highlight/src/css/plugin.css
+++ b/plugins/code-syntax-highlight/src/css/plugin.css
@@ -62,7 +62,7 @@
 .tui-editor-code-block-language-list .buttons {
   max-height: 169px;
   overflow: auto;
-  padding: 0px;
+  padding: 0;
 }
 
 .tui-editor-code-block-language-list button {
@@ -70,7 +70,7 @@
   background-color: #fff;
   border: none;
   outline: 0;
-  padding: 0px 10px;
+  padding: 0 10px;
   font-size: 13px;
   line-height: 24px;
   text-align: left;
