feat: apply prismjs on code syntax highlight plugin

--- a/plugins/code-syntax-highlight/src/css/plugin.css
+++ b/plugins/code-syntax-highlight/src/css/plugin.css
@@ -1,5 +1,5 @@
 .tui-editor-code-block-language {
-  position: absolute;
+  position: fixed;
   display: inline-block;
   right: 35px;
   z-index: 100;
